Use `Map.of` instead of custom implementation (#9032)