@@ -37,6 +37,7 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Array;
 import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -994,7 +995,7 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
     @Override
     public @NonNull <T extends Annotation> List<AnnotationValue<T>> getAnnotationValuesByType(@Nullable Class<T> annotationType) {
         if (annotationType == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         final String annotationTypeName = annotationType.getName();
         List<AnnotationValue<T>> results = annotationValuesByType.get(annotationTypeName);
@@ -1005,11 +1006,11 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
             } else if (allAnnotations != null) {
                 final Map<CharSequence, Object> values = allAnnotations.get(annotationTypeName);
                 if (values != null) {
-                    results = Collections.singletonList(newAnnotationValue(annotationTypeName, values));
+                    results = List.of(newAnnotationValue(annotationTypeName, values));
                 }
             }
             if (results == null) {
-                results = Collections.emptyList();
+                results = List.of();
             }
             annotationValuesByType.put(annotationTypeName, results);
         }
@@ -1019,11 +1020,11 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
     @Override
     public <T extends Annotation> List<AnnotationValue<T>> getAnnotationValuesByName(String annotationType) {
         if (annotationType == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         String repeatableTypeName = findRepeatableAnnotationContainerInternal(annotationType);
         if (repeatableTypeName == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<AnnotationValue<T>> results = resolveRepeatableAnnotations(repeatableTypeName, allAnnotations, allStereotypes);
         if (results != null) {
@@ -1032,14 +1033,14 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
         if (allAnnotations != null) {
             final Map<CharSequence, Object> values = allAnnotations.get(annotationType);
             if (values != null) {
-                results = Collections.singletonList(newAnnotationValue(annotationType, values));
+                results = List.of(newAnnotationValue(annotationType, values));
             }
         }
         if (results == null) {
-            results = Collections.emptyList();
+            results = List.of();
         }
         annotationValuesByType.put(annotationType, results);
-        return Collections.emptyList();
+        return List.of();
     }
 
     @NonNull
@@ -1051,26 +1052,26 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
     @Override
     public <T extends Annotation> List<AnnotationValue<T>> getDeclaredAnnotationValuesByType(@NonNull Class<T> annotationType) {
         if (annotationType == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<AnnotationValue<T>> results = resolveAnnotationValuesByType(annotationType, declaredAnnotations, declaredStereotypes);
         if (results != null) {
             return results;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
     public <T extends Annotation> List<AnnotationValue<T>> getDeclaredAnnotationValuesByName(String annotationType) {
         if (annotationType == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         String repeatableTypeName = findRepeatableAnnotationContainerInternal(annotationType);
         List<AnnotationValue<T>> results = resolveRepeatableAnnotations(repeatableTypeName, declaredAnnotations, declaredStereotypes);
         if (results != null) {
             return results;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @SuppressWarnings("unchecked")
@@ -1165,7 +1166,7 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
     @Override
     public List<String> getAnnotationNamesByStereotype(@Nullable String stereotype) {
         if (stereotype == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         if (annotationsByStereotype != null) {
             List<String> annotations = annotationsByStereotype.get(stereotype);
@@ -1174,18 +1175,18 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
             }
         }
         if (allAnnotations != null && allAnnotations.containsKey(stereotype)) {
-            return StringUtils.internListOf(stereotype);
+            return List.of(stereotype);
         }
         if (declaredAnnotations != null && declaredAnnotations.containsKey(stereotype)) {
-            return StringUtils.internListOf(stereotype);
+            return List.of(stereotype);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
     public <T extends Annotation> List<AnnotationValue<T>> getAnnotationValuesByStereotype(String stereotype) {
         if (stereotype == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         if (annotationsByStereotype != null) {
             List<String> annotations = annotationsByStereotype.get(stereotype);
@@ -1215,16 +1216,16 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
         if (declaredAnnotations != null) {
             return getDeclaredAnnotationValuesByName(stereotype);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @NonNull
     @Override
     public Set<String> getAnnotationNames() {
         if (allAnnotations != null) {
-            return allAnnotations.keySet();
+            return Collections.unmodifiableSet(allAnnotations.keySet());
         }
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @NonNull
@@ -1233,7 +1234,7 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
         if (allStereotypes != null) {
             return Collections.unmodifiableSet(allStereotypes.keySet());
         }
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @NonNull
@@ -1242,23 +1243,23 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
         if (declaredStereotypes != null) {
             return Collections.unmodifiableSet(declaredStereotypes.keySet());
         }
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @NonNull
     @Override
     public Set<String> getDeclaredAnnotationNames() {
         if (declaredAnnotations != null) {
-            return declaredAnnotations.keySet();
+            return Collections.unmodifiableSet(declaredAnnotations.keySet());
         }
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @NonNull
     @Override
     public List<String> getDeclaredAnnotationNamesByStereotype(@Nullable String stereotype) {
         if (stereotype == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         if (annotationsByStereotype != null) {
             List<String> annotations = annotationsByStereotype.get(stereotype);
@@ -1269,14 +1270,14 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
                     return Collections.unmodifiableList(annotations);
                 } else {
                     // no declared
-                    return Collections.emptyList();
+                    return List.of();
                 }
             }
         }
         if (declaredAnnotations != null && declaredAnnotations.containsKey(stereotype)) {
-            return StringUtils.internListOf(stereotype);
+            return List.of(stereotype);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     @NonNull
@@ -1535,16 +1536,16 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
         if (!hasStereotype(repeatableTypeName)) {
             return null;
         }
-        List<AnnotationValue<T>> results = new ArrayList<>();
+        List<AnnotationValue<T>> results = null;
         if (sourceAnnotations != null) {
             Map<CharSequence, Object> values = sourceAnnotations.get(repeatableTypeName);
-            addAnnotationValuesFromData(results, values);
+            results = collectResult(results, values);
         }
         if (sourceStereotypes != null) {
             Map<CharSequence, Object> values = sourceStereotypes.get(repeatableTypeName);
-            addAnnotationValuesFromData(results, values);
+            results = collectResult(results, values);
         }
-        return results;
+        return results == null ? List.of() : results;
     }
 
     @Nullable
@@ -1596,5 +1597,32 @@ public class DefaultAnnotationMetadata extends AbstractAnnotationMetadata implem
     @Nullable
     protected String findRepeatableAnnotationContainerInternal(@NonNull String annotation) {
         return AnnotationMetadataSupport.getRepeatableAnnotation(annotation);
+    }
+
+    private <T extends Annotation> List<AnnotationValue<T>> collectResult(List<AnnotationValue<T>> results, Map<CharSequence, Object> values) {
+        if (values != null) {
+            Object v = values.get(AnnotationMetadata.VALUE_MEMBER);
+            if (v instanceof AnnotationValue<?>[] avs) {
+                List<AnnotationValue<T>> result = (List) Arrays.asList(avs);
+                if (results == null) {
+                    return result;
+                } else {
+                    return CollectionUtils.concat(results, result);
+                }
+            } else if (v instanceof Collection<?> c) {
+                List<AnnotationValue<T>> result = new ArrayList<>(c.size());
+                for (Object o : c) {
+                    if (o instanceof io.micronaut.core.annotation.AnnotationValue<?> av) {
+                        result.add((AnnotationValue<T>) av);
+                    }
+                }
+                if (results == null) {
+                    return result;
+                } else {
+                    return CollectionUtils.concat(results, result);
+                }
+            }
+        }
+        return results;
     }
 }
